--- a/css/style.css
+++ b/css/style.css
@@ -27,21 +27,48 @@ body {
     flex-direction: column;
     align-items: center;
     font-size: 18px;
-    background-color: var(--pale);
+    /* background-color: var(--pale); */
 }
 
-/* header,
-.one {
-    background-image: url(../images/bg-hero-desktop.svg);
-} */
 
 button {
     border-radius: 20px;
     padding: 0.625rem;
 }
 
+button:hover {
+    cursor: pointer;
+}
+
 header button {
     background-color: var(--pale);
     color: var(--dark);
     border: none;
+}
+
+.box {
+    border: solid;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+}
+
+.together {
+    grid-row: 1;
+}
+
+.box figure {
+    grid-row: 1;
+}
+
+.box img {
+    width: 300px;
+}
+
+.build {
+    border: solid;
+}
+
+footer {
+    background-color: var(--dark);
+    width: 100%;
 }
