--- a/css/style.css
+++ b/css/style.css
@@ -40,16 +40,33 @@ button:hover {
     cursor: pointer;
 }
 
+.btn {
+    background-color: var(--pink);
+    color: var(--pale);
+    border: none;
+}
+
+header {
+    display: inline-flex;
+    align-items: center;
+}
+
 header button {
     background-color: var(--pale);
     color: var(--dark);
     border: none;
 }
 
+.hero {
+    background-image: url(../images/bg-hero-desktop.svg);
+    background-color: var(--grayish);
+}
+
 .box {
     border: solid;
     display: grid;
     grid-template-columns: auto auto auto auto;
+    border-radius: 10px;
 }
 
 .together {
@@ -66,9 +83,32 @@ header button {
 
 .build {
     border: solid;
+    border-radius: 10px;
 }
 
 footer {
     background-color: var(--dark);
     width: 100%;
+}
+
+.one {
+    display: inline-flex;
+}
+
+.one img {
+    width: 500px;
+}
+
+.first {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+.two {
+    margin-left: 8rem;
+    margin-right: 8rem;
 }
