--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ h3 {
 button {
     border-radius: 20px;
     padding: 0.625rem;
+    box-shadow: 0 3px 5px rgb(0 0 0 / 20%);
 }
 
 button:hover {
@@ -52,15 +53,27 @@ button:hover {
     border: none;
 }
 
-header {
-    display: inline-flex;
-    align-items: center;
+.btn:active {
+background-color: var(--pink);
+opacity: 0.5;
 }
+
+/* header {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+} */
 
 header button {
     background-color: var(--pale);
     color: var(--dark);
     border: none;
+    font-weight: 700;
+}
+
+header button:active {
+    background-color: var(--pale);
+    opacity: 0.5;
 }
 
 .hero {
@@ -108,8 +121,7 @@ footer {
     background-color: var(--dark);
     width: 100%;
     color: var(--pale);
-    padding-top: 4rem;
-    padding-bottom: 4rem;
+    padding:  6rem 4rem 4rem 4rem;
 }
 
 .fixed {
@@ -122,6 +134,7 @@ footer {
 
 .copyright {
     float: right;
+    font-size: 12px;
 }
 
 .one {
@@ -199,6 +212,14 @@ footer {
     width: 25%;
     display: flex;
     justify-content: center;
+}
+
+.fourth {
+    margin-top: 1rem ;
+}
+
+.fourth img {
+    margin: .625rem;
 }
 
 .location,
